test/spec_vectors/global/fail/module_52.wat
(module (global $g funcref (ref.null func)) (table $t 10 funcref (global.get $g)))